--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <meta name="author" content>
     <!--Media-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--Font-->
+    <!--Fonts and Icons-->
     <link href="#" rel="stylesheet" type="#">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <!--CSS-->
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="css/index.css">
     <!--JavaScript-->
     <script src="#" async></script>
     </head>
@@ -19,7 +20,7 @@
         <div class="container">
                 <header>
                     <nav>
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                         <a class="nav-link button" href="#">Log In</a>
                     </nav>
                 </header>  
