Less updated again with imports

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <body>
         <div class="container">
                 <header>
+                        <img class="logo" src="#" alt="Header Logo">
                     <nav>
                         <a class="nav-link" href="about.html">About</a>
                         <a class="nav-link button" href="#">Log In</a>
