--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
     <body>
         <div class="container">
                 <header>
+                        <img class="logo" src="#" alt="Header Logo">
                     <nav>
                         <a class="nav-link" href="index.html">Home</a>
                         <a class="nav-link button" href="#">Log In</a>
