font families added

--- a/about.html
+++ b/about.html
@@ -9,12 +9,15 @@
     <!--Media-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Fonts and Icons-->
-    <link href="#" rel="stylesheet" type="#">
+    <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <!--CSS-->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="CSS/index.css">
     <!--JavaScript-->
-    <script src="#" async></script>
+    <script src="Header/header.js" async></script>
+    <script src="Footer/footer.js" async></script>
+    <script src="About-Page/about-page.js" async></script>
     </head>
     <body>
         <div class="container">
